         standard one (Fred).
20150510 ui/widget/filesel.c: use PATH_MAX instead of FILENAME_MAX as our
         standard compatibility define (thanks, Brian Ruthven) (Fred).
20150510 ui/widget/filesel.c: use ENTRIES_PER_SCREEN rather than PAGESIZE due
         to name clash on Solaris (thanks, Brian Ruthven) (Fred).
20150510 Makefile.am,m4/pkg.m4: update pkg.m4 and add explicit distribution rule
         for ax_pthread.m4 (Sergio).
20150511 fuse.c,hacking/ChangeLog,machines/machines_periph.c,menu.[ch],
         menu_data.dat,periph.h,peripherals/disk/{Makefile.am,didaktik.[ch],
         disk.[ch],wd_fdc.c},settings.{dat,pl},ui.c,ui/{options.dat,ui.h,
         uimedia.h},utils.c,z80/{coretest.c,z80_checks.h,z80_ops.c}: add
         Didaktik 80/40 emulation (part of patch #331) (Gergely Szasz).
20150511 man/fuse.1: add initial Didaktik 80/40 documentation (Stuart).
20150511 AUTHORS,man/fuse.1: note authorship of ALSA driver and Didaktik 80
         emulation (Stuart).
20150511 peripherals/{ay.c,disk/{beta.c,didaktik.c,disciple.c,opus.c,plusd.c},
         fuller.c,ide/{divide.c,simpleide.c,zxatasp.c,zxcf.c},if1.c,if2.c,
         joystick.c,kempmouse.c,melodik.c,printer.c,scld.c,speccyboot.c,
         specdrum.c,spectranet.c,ula.c,usource.c}: add C99-style named
         initialisers in comments (Stuart).
20150512 event.c,machines/{spec16.c,tc2068.c},periph.c,peripherals/{nic/{
         w5100.c,w5100_socket.c},spectranet.c},ui.c,ui/{sdl/sdldisplay.c,
         widget/{filesel.c,pokemem.c}}: avoid mixing declarations and code for
         C89 compilers (Adrien Destugues).
20150513 peripherals/disk/wd_fdc.[ch]: add WD2797 non-IBM sector sizes (addition
         to patch #330) (Gergely Szasz).
20150513 compat.h: fix ARRAY_SIZE when using a modern GCC with strict C89 syntax
         (Sergio).
20150513 compat.h: fix ARRAY_SIZE when using a modern GCC with strict C89 syntax
20150513 peripherals/disk/wd_fdc.c,ui/svga/svgadisplay.c: avoid C99 comments
         (Stuart).