@@ -72,7 +72,7 @@ init_stick( int which )
   }
 
   buttons[which] = joystick_getnumbuttons( which );
-  if( buttons[which] > 10 ) buttons[which] = 10;
+  if( buttons[which] > NUM_JOY_BUTTONS ) buttons[which] = NUM_JOY_BUTTONS;
 
   return 0;
 }
