@@ -38,8 +38,13 @@
 #define IDC_JOYSTICKS_GROUP_BUTTON8   ( IDC_JOYSTICKS_GROUP_BUTTON7 + 1 )
 #define IDC_JOYSTICKS_GROUP_BUTTON9   ( IDC_JOYSTICKS_GROUP_BUTTON8 + 1 )
 #define IDC_JOYSTICKS_GROUP_BUTTON10  ( IDC_JOYSTICKS_GROUP_BUTTON9 + 1 )
+#define IDC_JOYSTICKS_GROUP_BUTTON11  ( IDC_JOYSTICKS_GROUP_BUTTON10 + 1 )
+#define IDC_JOYSTICKS_GROUP_BUTTON12  ( IDC_JOYSTICKS_GROUP_BUTTON11 + 1 )
+#define IDC_JOYSTICKS_GROUP_BUTTON13  ( IDC_JOYSTICKS_GROUP_BUTTON12 + 1 )
+#define IDC_JOYSTICKS_GROUP_BUTTON14  ( IDC_JOYSTICKS_GROUP_BUTTON13 + 1 )
+#define IDC_JOYSTICKS_GROUP_BUTTON15  ( IDC_JOYSTICKS_GROUP_BUTTON14 + 1 )
 
-#define IDC_JOYSTICKS_STATIC_BUTTON1  ( IDC_JOYSTICKS_GROUP_BUTTON10 + 1 )
+#define IDC_JOYSTICKS_STATIC_BUTTON1  ( IDC_JOYSTICKS_GROUP_BUTTON15 + 1 )
 #define IDC_JOYSTICKS_STATIC_BUTTON2  ( IDC_JOYSTICKS_STATIC_BUTTON1 + 1 )
 #define IDC_JOYSTICKS_STATIC_BUTTON3  ( IDC_JOYSTICKS_STATIC_BUTTON2 + 1 )
 #define IDC_JOYSTICKS_STATIC_BUTTON4  ( IDC_JOYSTICKS_STATIC_BUTTON3 + 1 )
@@ -49,8 +54,13 @@
 #define IDC_JOYSTICKS_STATIC_BUTTON8  ( IDC_JOYSTICKS_STATIC_BUTTON7 + 1 )
 #define IDC_JOYSTICKS_STATIC_BUTTON9  ( IDC_JOYSTICKS_STATIC_BUTTON8 + 1 )
 #define IDC_JOYSTICKS_STATIC_BUTTON10 ( IDC_JOYSTICKS_STATIC_BUTTON9 + 1 )
+#define IDC_JOYSTICKS_STATIC_BUTTON11 ( IDC_JOYSTICKS_STATIC_BUTTON10 + 1 )
+#define IDC_JOYSTICKS_STATIC_BUTTON12 ( IDC_JOYSTICKS_STATIC_BUTTON11 + 1 )
+#define IDC_JOYSTICKS_STATIC_BUTTON13 ( IDC_JOYSTICKS_STATIC_BUTTON12 + 1 )
+#define IDC_JOYSTICKS_STATIC_BUTTON14 ( IDC_JOYSTICKS_STATIC_BUTTON13 + 1 )
+#define IDC_JOYSTICKS_STATIC_BUTTON15 ( IDC_JOYSTICKS_STATIC_BUTTON14 + 1 )
 
-#define IDC_JOYSTICKS_BUTTON_BUTTON1  ( IDC_JOYSTICKS_STATIC_BUTTON10 + 1 )
+#define IDC_JOYSTICKS_BUTTON_BUTTON1  ( IDC_JOYSTICKS_STATIC_BUTTON15 + 1 )
 #define IDC_JOYSTICKS_BUTTON_BUTTON2  ( IDC_JOYSTICKS_BUTTON_BUTTON1 + 1 )
 #define IDC_JOYSTICKS_BUTTON_BUTTON3  ( IDC_JOYSTICKS_BUTTON_BUTTON2 + 1 )
 #define IDC_JOYSTICKS_BUTTON_BUTTON4  ( IDC_JOYSTICKS_BUTTON_BUTTON3 + 1 )
@@ -60,8 +70,13 @@
 #define IDC_JOYSTICKS_BUTTON_BUTTON8  ( IDC_JOYSTICKS_BUTTON_BUTTON7 + 1 )
 #define IDC_JOYSTICKS_BUTTON_BUTTON9  ( IDC_JOYSTICKS_BUTTON_BUTTON8 + 1 )
 #define IDC_JOYSTICKS_BUTTON_BUTTON10 ( IDC_JOYSTICKS_BUTTON_BUTTON9 + 1 )
+#define IDC_JOYSTICKS_BUTTON_BUTTON11 ( IDC_JOYSTICKS_BUTTON_BUTTON10 + 1 )
+#define IDC_JOYSTICKS_BUTTON_BUTTON12 ( IDC_JOYSTICKS_BUTTON_BUTTON11 + 1 )
+#define IDC_JOYSTICKS_BUTTON_BUTTON13 ( IDC_JOYSTICKS_BUTTON_BUTTON12 + 1 )
+#define IDC_JOYSTICKS_BUTTON_BUTTON14 ( IDC_JOYSTICKS_BUTTON_BUTTON13 + 1 )
+#define IDC_JOYSTICKS_BUTTON_BUTTON15 ( IDC_JOYSTICKS_BUTTON_BUTTON14 + 1 )
 
-#define IDR_JOYSTICKS_POPUP           ( IDC_JOYSTICKS_BUTTON_BUTTON10 + 1 )
+#define IDR_JOYSTICKS_POPUP           ( IDC_JOYSTICKS_BUTTON_BUTTON15 + 1 )
 
 /*
    win32joystick_buttonevent parameters:
