@@ -4834,3 +4834,6 @@
 20150513 compat.h: fix ARRAY_SIZE when using a modern GCC with strict C89 syntax
 20150513 peripherals/disk/wd_fdc.c,ui/svga/svgadisplay.c: avoid C99 comments
          (Stuart).
+20150514 ui/gtk/gtkjoystick.c,ui/sdl/sdljoystick.c,ui/svga/svgajoystick.c,
+         ui/uijoystick.[ch],ui/win32/win32joystick.[c|h|rc]: standardise the
+         number of joystick buttons across UIs (fixes bug #332) (UB880D).
